[package]
name = "dnst"
version = "0.1.0"
edition = "2021"
default-run = "dnst"
readme = "README.md"
repository = "https://github.com/nlnetlabs/dnst/"
authors = ["NLnet Labs <dns-team@nlnetlabs.nl>"]
description = "Rust reimplementation of important ldns programs."
categories = ["command-line-utilities"]
license = "BSD-3-Clause"
license-file = "LICENSE"
keywords = ["DNS", "domain", "ldns"]

[[bin]]
name = "ldns"
path = "src/bin/ldns.rs"

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
domain = "0.10.1"
lexopt = "0.3.0"

# for implementation of nsec3 hash until domain has it stabilized
octseq = { version = "0.5.1", features = ["std"] }
ring = { version = "0.17" }
